# IncrementalRLForSpokenDST

./: .gitignore  README.md  pyproject.toml  pyproject_clova.toml  pyproject_romi.toml
docs/: incremental_dst.md  multi-model-support-plan.md  research_overview.md
prompts/: incremental.txt
scripts/: compute_ser.py  convert_to_sft.py  eval.py  eval_fullstate.py  infer.sh  infer_fullstate_oracle.sh  infer_fullstate_predicted.sh  infer_fullstate_vllm.py  infer_oracle.sh  infer_predicted.sh  infer_vllm.py  infer_vllm.sh  plot_jga_by_turn.py  plot_jga_by_turn_paper.py  prepare_fullstate_data.py  sample_val.py  train_grpo.sh  train_grpo_ablation_no_transcript.sh  train_grpo_fullstate.sh  train_sft.sh  train_sft_fullstate.sh
scripts/eval/: eval.py  eval_fullstate.py  plot_jga_by_turn.py
scripts/infer/: infer.py  infer_fullstate.py  infer_fullstate_oracle.sh  infer_fullstate_predicted.sh  infer_oracle.sh  infer_predicted.sh
scripts/infer/audio_flamingo3/: infer.py
scripts/train/: convert_to_sft.py  dst_common.py  prepare_data.py  prepare_data_dstc11.py  prepare_data_realtalk_cn.py  prepare_data_spokentod.py  prepare_fullstate_data.py  split_audio.py  split_audio_dstc11.py  train_grpo.sh  train_grpo_ablation_no_transcript.sh  train_grpo_fullstate.sh  train_sft.sh  train_sft_fullstate.sh
src/: reward.py
src/swift_plugin/: dapo_reward.py
system_prompt/: fullstate_baseline.txt  incremental_baseline_sft.txt
tests/: test_dst_common.py  test_eval.py  test_model_adapters.py  test_prepare_data.py  test_prepare_data_dstc11.py  test_reward.py  test_system_prompts.py
(+6 files in other folders)
