[project]
name = "incremental-rl-dst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "vllm>=0.13.0",
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.0",
    "datasets>=3.0.0",
    "deepspeed>=0.18.3",
    "flash-attn",
    "librosa>=0.11.0",
    "peft>=0.11.0",
    "pydub>=0.25.1",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "wandb>=0.23.1",
    "qwen-vl-utils==0.0.14",
    "msgspec>=0.19.0",
    "av<16.1.0",
    "soundfile>=0.13.0",
    "qwen-omni-utils",
    "decord>=0.6.0",
    "ms-swift>=3.12.4",
    "h5py>=3.12.0",
]


[tool.uv.sources]
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.9cxx11abiTRUE-cp312-cp312-linux_x86_64.whl" }
